# vvrs

./: Cargo.toml  LICENSE
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: shader.wgsl
benches/: bench_main.rs  chunk_meshing.rs
benches/benchmarks/: chunk_meshing.rs  mod.rs  vis_graph_creation.rs
docs/: README.md
src/: block.rs  chunk.rs  game.rs  input.rs  lib.rs  main.rs  mesh.rs  player.rs  window_state.rs
src/allocator/: mod.rs
src/chunk/: culling.rs  manager.rs  mesher.rs  mod.rs  pool.rs  traverse.rs  visibility.rs
src/util/: allocator.rs  mod.rs  vec_set.rs
