[package]
name = "vvrs"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vvrs"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
winit = { version = "0.30.5" }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
wgpu_text = "0.9.0"
pollster = "0.3.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
bytemuck = "1.19.0"
cgmath = "0.18.0"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chunk_meshing"
harness = false